// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonCheck > Style should render the RadioButtonCheck with checked true and disabled true 1`] = `
.c0 {
  width: 8px;
  height: 8px;
  border-radius: 100%;
  background-color: #161616;
}

<div
  aria-disabled={true}
  className="c0 sc-gtssRu c0 css-view-1dbjc4n"
  disabled={true}
/>
`;

exports[`RadioButtonText > Style should render the RadioButtonText with disabled true 1`] = `
.c0 {
  margin-left: 8px;
  color: #e0e0e0;
}

<div
  aria-disabled={true}
  className="c0 sc-dlnjPT c0 css-text-901oao"
  dir="auto"
  disabled={true}
/>
`;
